# pytest-drift

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.py
pytest_drift/: ci.py  compare.py  pandas_utils.py  plugin.py  report.py  runner.py  storage.py
tests/: conftest.py  test_ci.py  test_compare.py  test_pandas_utils.py  test_plugin.py  test_storage.py
